added the maven base image to ecr and use ecr image

--- a/theessentialquo-user/Dockerfile
+++ b/theessentialquo-user/Dockerfile
@@ -1,5 +1,6 @@
 # Build stage
-FROM maven:3.9.6-eclipse-temurin-17 AS build
+FROM 605134445572.dkr.ecr.us-east-2.amazonaws.com/theessentialquo/maven-base-image:3.9.6-eclipse-temurin-17 AS build
+ AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
