added all the docker base image to ecr and use ecr image

--- a/theessentialquo-user/Dockerfile
+++ b/theessentialquo-user/Dockerfile
@@ -6,7 +6,7 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Package stage
-FROM eclipse-temurin:17-jdk-alpine
+FROM 605134445572.dkr.ecr.us-east-2.amazonaws.com/theessentialquo/eclipse-temurin:17-jdk-alpine
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "/app.jar"]
