--- a/theessentialquo-user/Jenkinsfile
+++ b/theessentialquo-user/Jenkinsfile
@@ -13,13 +13,16 @@ pipeline {
         }
         stage('Build') {
             steps {
-		sh 'cd theessentialquo-user'
-                sh 'mvn clean package'
+		dir('theessentialquo-user'){
+                	sh 'mvn clean package'
+		}
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
+		dir('theessentialquo-user'){
+                	sh 'mvn test'
+		}
             }
         }
         // Optional: add Docker build/push, deploy etc.
