--- a/theessentialquo-product/Jenkinsfile
+++ b/theessentialquo-product/Jenkinsfile
@@ -1,20 +1,12 @@
-environment {
-  GIT_REPO_URL   = 'https://github.com/kaivalyashah/ECS_Fargate_Containerized_Microservices.git'
-  MAVEN_OPTS     = '-Dmaven.test.failure.ignore=false'
-
-  
-  AWS_REGION     = 'us-east-2'                   // <--- change if needed
-  ECR_ACCOUNT_ID = '605134445572'                // <--- your AWS account id
-  ECR_REPO       = 'theessentialquo/theessentialquo-product-service'     // <--- your ECR repo name
-}
-
-
 pipeline {
   agent any
 
   environment {
     GIT_REPO_URL = 'https://github.com/kaivalyashah/ECS_Fargate_Containerized_Microservices.git'
     MAVEN_OPTS   = '-Dmaven.test.failure.ignore=false'
+	AWS_REGION     = 'us-east-2'                   // <--- change if needed
+	ECR_ACCOUNT_ID = '605134445572'                // <--- your AWS account id
+	ECR_REPO       = 'theessentialquo/theessentialquo-product-service'     // <--- your ECR repo name
   }
 
   options {
@@ -112,18 +104,17 @@ pipeline {
 			// short commit SHA for tagging
 			def shortSha = sh(script: 'git rev-parse --short HEAD', returnStdout: true).trim()
 			// read version from pom.xml (works for Maven projects)
-			def appVersion = sh(script: "mvn -q -DforceStdout -Dexpression=project.version help:evaluate", returnStdout: true).trim()
+			// def appVersion = sh(script: "mvn -q -DforceStdout -Dexpression=project.version help:evaluate", returnStdout: true).trim()
 
 			env.IMAGE_URI = "${ECR_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/${ECR_REPO}"
 			env.TAG_SHA   = shortSha
-			env.TAG_VER   = appVersion
+			// env.TAG_VER   = appVersion
 
 			// build once, tag twice (sha and version)
 			sh """
 			  docker build -t ${ECR_REPO}:build .
 			  docker tag ${ECR_REPO}:build ${IMAGE_URI}:${TAG_SHA}
-			  docker tag ${ECR_REPO}:build ${IMAGE_URI}:${TAG_VER}
-			"""
+			  """
 		  }
 		}
 	  }
