prometheus pom.xml,application.properties

--- a/theessentialquo-product/src/main/resources/application.properties
+++ b/theessentialquo-product/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=theessentialquo-product
 server.port=8082
 server.servlet.context-path=/product
+# expose prometheus endpoint
+management.endpoints.web.exposure.include=health,info,prometheus
+# (optional) faster scrape granularity
+management.metrics.export.prometheus.step=15s
