--- a/theessentialquo-user/src/main/resources/application.properties
+++ b/theessentialquo-user/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=theessentialquo-user
 server.port=8081
 server.servlet.context-path=/user
+# expose prometheus endpoint
+management.endpoints.web.exposure.include=health,info,prometheus
+# (optional) faster scrape granularity
+management.metrics.export.prometheus.step=15s
